🔨 Update configs for development environment: scalafmt

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,2 +1,7 @@
 version = 3.7.13
 runner.dialect = scala3
+maxColumn = 100
+align.preset = more
+danglingParentheses.defnSite = true
+danglingParentheses.callSite = false
+spaces.beforeContextBoundColon=Never
